can log keys and each letter goes into it's own span

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     <title>Typing Game</title>
 </head>
 <body>
     <h1>Typing Kareoke <img class="note" src="https://e7.pngegg.com/pngimages/250/419/png-clipart-musical-note-song-rectangle-logo.png"/></h1>
     <p>Type the whole song before time runs out!</p>
     <div class="container">
-        <div  class="lyrics">This should look like a screen use .lyrics</div>
+        <div class="lyrics">
+          <!-- <span id="text">This should look like a screen use .lyrics for div and #text for span</span> -->
+        </div>
         <div class="options">
           <div  class="Song-name">The name of the song .song-name</div>
           <div class="timer">This can show the timer .timer</div>
