progress bar and button working

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <title>Typing Game</title>
 </head>
 <body>
-    <h1>Typing Kareoke <img class="note" src="https://e7.pngegg.com/pngimages/250/419/png-clipart-musical-note-song-rectangle-logo.png"/></h1>
+    <h1>Typing Kareoke!</h1>
     <p>Type the whole song before time runs out!</p>
     <div class="container">
         <div class="lyrics">
           <!-- <span id="text">This should look like a screen use .lyrics for div and #text for span</span> -->
         </div>
-        <div class="options">
-          <div  class="Song-name">The name of the song .song-name</div>
-          <div class="timer">This can show the timer .timer</div>
-          <button class="start"></button>
-        </div>
-        <div class="load"></div>
-      </div>
+     </div>
+     <div class="progress">
+      <!-- <div  class="Song-name">The name of the song .song-name</div> -->
+      <button class="start">Play</button>
+      <div class="timer"></div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
