Restart button is working

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <title>Typing Game</title>
 </head>
 <body>
     <h1>Typing Kareoke!</h1>
+    <!-- <p>Select your level below</p> -->
+    <!-- <div class= "level">
+      <div class="select">Easy</div>
+      <div class="select">Medium</div>
+      <div class="select">Hard</div>
+    </div> -->
     <p>Type the whole song before time runs out!</p>
     <div class="container">
         <div class="lyrics">
-          <!-- <span id="text">This should look like a screen use .lyrics for div and #text for span</span> -->
         </div>
      </div>
      <div class="progress">
@@ -20,6 +26,7 @@
       <button class="start">Play</button>
       <div class="timer"></div>
     </div>
+
     <script src="app.js"></script>
 </body>
 </html>
