updated HTML without levels

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <h1>Typing Kareoke!</h1>
-    <!-- <p>Select your level below</p> -->
-    <!-- <div class= "level">
+    <!-- <p>Select your level below</p>
+    <div class= "level">
       <div class="select">Easy</div>
       <div class="select">Medium</div>
       <div class="select">Hard</div>
