removed event listeners to fix the bug where it kept skipping after using the refresh button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <h1>Typing Kareoke!</h1>
-    <!-- <p>Select your level below</p>
-    <div class= "level">
-      <div class="select">Easy</div>
-      <div class="select">Medium</div>
-      <div class="select">Hard</div>
-    </div> -->
+    <p>Select your level below</p>
+    <select name="choices" id="level">
+      <option value="easy">Easy</option>
+      <option value="medium">Medium</option>
+      <option value="hard">Hard</option>
+    </select>
     <p>Type the whole song before time runs out!</p>
     <div class="container">
         <div class="lyrics">
