displays when game is over

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <title>Typing Game</title>
 </head>
 <body>
     <h1>Typing Kareoke!</h1>
-    <p>Select your level below</p>
+    <!-- <p>Select your level below</p>
     <select name="choices" id="level">
       <option value="easy">Easy</option>
       <option value="medium">Medium</option>
       <option value="hard">Hard</option>
-    </select>
+    </select> -->
     <p>Type the whole song before time runs out!</p>
     <div class="container">
         <div class="lyrics">
