cleaned up console.logs and gave hint to how fast you need to type to win

--- a/index.html
+++ b/index.html
@@ -10,20 +10,14 @@
     <title>Typing Game</title>
 </head>
 <body>
-    <h1>Typing Kareoke!</h1>
-    <!-- <p>Select your level below</p>
-    <select name="choices" id="level">
-      <option value="easy">Easy</option>
-      <option value="medium">Medium</option>
-      <option value="hard">Hard</option>
-    </select> -->
+    <h1>Typing Kareoke</h1>
     <p>Type the whole song before time runs out!</p>
+    <p>Hint:You will need to type 80WPM to win!</p>
     <div class="container">
         <div class="lyrics">
         </div>
      </div>
      <div class="progress">
-      <!-- <div  class="Song-name">The name of the song .song-name</div> -->
       <button class="start">Play</button>
       <div class="timer"></div>
     </div>
