--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+    <meta name="description" content="Portfolio for Vanessa Avila" />
+    <meta name="image" property="og:image" content="Landing.png"/>
     <title>Typing Game</title>
 </head>
 <body>
