updated url for image to raw.github image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <meta name="description" content="Portfolio for Vanessa Avila" />
-    <meta name="image" property="og:image" content="Landing.png"/>
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/regularvanessaperson/typing_game_project/24bb364e3c6edb86cc3298fdc741b128d564536a/Landing.png"/>
     <title>Typing Game</title>
 </head>
 <body>
